tests/invalid/borrow_conflict/replace_through_linear_ref_then_drop_root.facet
fn f(mut x: linear isize, y: linear isize) -> unrestricted () {
    let r: affine &mut linear isize = (&mut x);
    let old: linear isize = (replace *r y);
    (drop old);
    (drop x)
}
